# nexo

./: .gitignore  AGENT.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  utils.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: autostart.rs  lib.rs  main.rs  store.rs
apps/desktop/src/api/: desktop.ts
apps/desktop/src/components/: ConfirmDialog.tsx  DiagnosticsPanel.tsx  IncomingTransferDialog.tsx  JobCard.tsx  JobList.tsx  Metric.tsx  NodeNetwork.tsx  PairingDialog.tsx  ProgressBar.tsx  Sidebar.tsx  TopBar.tsx  ui.tsx
apps/desktop/src/lib/: dragdrop.ts  notify.ts  progress.ts  useDesktopData.ts
apps/desktop/src/screens/: Dashboard.tsx  DevicesScreen.tsx  DiscoverPeers.tsx  HistoryScreen.tsx  Home.tsx  MonitorScreen.tsx  Onboarding.tsx  ReceiveFiles.tsx  ReceiveScreen.tsx  SendFile.tsx  SendScreen.tsx  Settings.tsx  SettingsScreen.tsx  StressScreen.tsx  TransferProgress.tsx  TrustedScreen.tsx  nav.ts
apps/desktop/src/styles/: app.css  theme.css
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/common/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: chunker.rs  lib.rs  pipeline.rs
crates/engine/tests/: transfer_pipeline.rs
crates/networking/: Cargo.toml
crates/networking/src/: discovery.rs  lib.rs  quic.rs
crates/networking/tests/: peer_discovery.rs  quic_transport.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
docs/: architecture.md  cli.md  crypto-layer.md  linux-install.md  loopback-transport.md  mvp.md  peer-discovery.md  protocol.md  quic-transport.md  release-checklist.md  release-notes-v1.0.0.md  roadmap.md  session-layer.md  tech-stack.md  transfer-pipeline.md  transport-layer.md  update-system.md  windows-development.md  windows-install-test.md  windows-install.md
docs/roadmap/: nexo-2-share-links.md
docs/screenshots/: README.md
scripts/: windows-check.ps1
