[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
crypto = { path = "../crypto" }
engine = { path = "../engine" }
networking = { path = "../networking" }
storage = { path = "../storage" }
