[package]
name = "cli"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "nexo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
common = { path = "../common" }
crypto = { path = "../crypto" }
engine = { path = "../engine" }
hostname = "0.4"
if-addrs = "0.15"
networking = { path = "../networking" }
rand_core = { version = "0.6", features = ["getrandom"] }
storage = { path = "../storage" }
