[package]
name = "networking"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
common = { path = "../common" }
flume = "0.11"
if-addrs = "0.15"
mdns-sd = { version = "0.20", default-features = false }
quinn = "0.11"
rcgen = "0.14"
tokio = { version = "1", features = ["io-util", "rt-multi-thread", "time"] }

[dev-dependencies]
storage = { path = "../storage" }
