[package]
name = "nexo-desktop"
version = "1.0.0"
description = "Nexo desktop application"
edition = "2024"

[lib]
name = "nexo_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nexo-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cli = { path = "../../../crates/cli" }
common = { path = "../../../crates/common" }
engine = { path = "../../../crates/engine" }
networking = { path = "../../../crates/networking" }
crypto = { path = "../../../crates/crypto" }
storage = { path = "../../../crates/storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
time = { workspace = true }
